--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <script src="angular.min.js"></script>
     <script src="app.js"></script>
-    <title>Directives</title>
+    <title>Restaurant Application</title>
     <style>
       td, th {
         border: 1px solid #dddddd;
